--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                     <p>GPA: 3.45</p>
                 </div>
                 <div class="eduright">
-                    <p>Jul 2024 <br>
+                    <p style="margin-top: 0.8vw;">Jul 2024 <br>
                         Graduation Date</p>
                 </div>
 
@@ -159,12 +159,12 @@
                         Jimma University Architecture and Urban Planing
                         Department
                     </p>
-                    <p style="margin-top: 1.5vw;">
+                    <p style="margin-top: 2vw;">
                         Certificate of Completion in Life and Soft Skill
                         Training <br>
                         Integrated Youth Activity-Kefeta
                     </p>
-                    <p style="margin-top: 1vw;">
+                    <p style="margin-top: 1.5vw;">
                         Certificate of Completion of Employability skill
                         and job readiness training <br>
                         Dereja
@@ -249,31 +249,42 @@
 
                 <div class="refright">
                     <p><i>Contact detail:</i><br>
-                        Email: <a href="mailto: ermidbu@gmail.com" style="text-decoration: none;">ermidbu@gmail.com</a>   
-                        <a href="mailto" style="margin-left: 4.3vw; text-decoration: none;">ermiyas.abera@ju.edu.et</a><br>
-                        Tel: <a href="tel: +251954356992" style="margin-left: 1.3vw; text-decoration: none;">+251954356992</a>
+                        Email: <a href="mailto: ermidbu@gmail.com" style="text-decoration: none;">ermidbu@gmail.com</a>
+                        <a href="mailto"
+                            style="margin-left: 4.3vw; text-decoration: none;">ermiyas.abera@ju.edu.et</a><br>
+                        Tel: <a href="tel: +251954356992"
+                            style="margin-left: 1.3vw; text-decoration: none;">+251954356992</a>
                     <p>
                         <i>Contact detail:</i><br>
-                        Email: <a href="mailto: yekoya104@gmail.com" style="text-decoration: none;">yekoya104@gmail.com</a> <br>
-                        <a href="mailto: yekoye.asmare@ju.edu.et;" style="margin-left: 4.3vw; text-decoration: none;">yekoye.asmare@ju.edu.et</a> <br>
-                        Tel: <a href="tel:+251931863003" style="margin-left: 1.3vw; text-decoration: none;;">+251931863003</a>
+                        Email: <a href="mailto: yekoya104@gmail.com"
+                            style="text-decoration: none;">yekoya104@gmail.com</a> <br>
+                        <a href="mailto: yekoye.asmare@ju.edu.et;"
+                            style="margin-left: 4.3vw; text-decoration: none;">yekoye.asmare@ju.edu.et</a> <br>
+                        Tel: <a href="tel:+251931863003"
+                            style="margin-left: 1.3vw; text-decoration: none;;">+251931863003</a>
                     </p>
                     <p>
                         <i>Contact detail:</i><br>
-                        Email: <a href="mailto: Danizew@gmail.com" style="text-decoration: none;">Danizew@gmail.com</a> <br>
-                        Tel: <a href="tel:+251912127988" style="margin-left: 1.3vw; text-decoration: none;">+251912127988</a>
+                        Email: <a href="mailto: Danizew@gmail.com" style="text-decoration: none;">Danizew@gmail.com</a>
+                        <br>
+                        Tel: <a href="tel:+251912127988"
+                            style="margin-left: 1.3vw; text-decoration: none;">+251912127988</a>
                     </p>
                 </div>
             </div>
         </div>
     </div>
     <script src="script.js"></script>
+    <div class="original">
+        <p>Click <a href="CV_Kirubel_Eshetu.pdf">here</a> to see the document format of the CV</p>
+
+    </div>
 </body>
 
-<!-- <footer>
-    <p class="footer">This CV was created by Kirubel Eshetu <br>
-        Ways to reach me:
-    </p>
-    <p -->
-
+<footer>
+    <div class="footerdiv">
+    <p>This CV was created by Kirubel Eshetu</p>
+    <p>All rights revieved 2025</p>
+</div>
+</footer>
 </html>
