--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>CV_Kirubel Eshetu</title>
+    <link rel="icon" href="My_picture.jpg">
 </head>
 
 <body>
