--- a/index.html
+++ b/index.html
@@ -29,17 +29,16 @@
         </div>
         <div class="containerright">
             <div class="innerdiv">
-                <h1 style="font-size: 4vw;">Kirubel Eshetu</h1>
-                <h2 style="font-size: 2.5vw;">Fresh Graduate</h2>
+                <h1 class="h1kirub">Kirubel Eshetu</h1>
+                <h2 class="h2fresh">Fresh Graduate</h2>
             </div>
             <div class="divcontent">
                 <h3>About</h3>
-                <p style="margin-left: 5vw; line-height: 1.6vw; font-size: 1.45vw; text-align: justify;">
+                <p class="bio">
                     My name is Kirubel Eshetu Tefera. I am a young man who is passionate about technology. I recently
                     graduated with a bachelor’s degree in computer science from Jimma University. I am committed to
                     continuously expanding my knowledge and skills in the field. With a strong work ethic and
-                    dedication, I
-                    am eager to contribute meaningfully and build a successful career in technology.
+                    dedication, I am eager to contribute meaningfully and build a successful career in technology.
                 </p>
             </div>
             <h3>Education</h3>
@@ -81,6 +80,12 @@
             <h3>Certifications</h3>
             <div class="certcontainer">
                 <div class="certleft">
+                    <p>Feb 2024 <br>
+                        <i style="font-size: 1.3vw;">Certification was issued</i>
+                    </p>
+                    <p>Jan 2024 <br>
+                        <i style="font-size: 1.3vw;">Certification was issued</i>
+                    </p>
                     <p>Dec 2024 <br>
                         <i style="font-size: 1.3vw;">Certification was issued</i>
                     </p>
@@ -92,40 +97,27 @@
                         Aug 2024 <br>
                         <i style="font-size: 1.3vw;">Certification was issued</i>
                     </p>
-                    <p>
+                    <p style="margin-top: 3.0vw;">
                         Jul 2024 <br>
                         <i style="font-size: 1.3vw;">Certification was issued</i>
                     </p>
-                    <p style="margin-top: 3vw;">
+                    <p style="margin-top: 2.8vw;">
                         May 2024 <br>
                         <i style="font-size: 1.3vw;">Certification was issued</i>
                     </p>
-                    <p>
-                        Apr 2024 <br>
-                        <i style="font-size: 1.3vw;">Certification was issued</i>
-                    </p>
-                    <p style="margin-top: 3.5vw;">
-                        Mar 2024 <br>
-                        <i style="font-size: 1.3vw;">Certification was issued</i>
-                    </p>
-                    <p>
-                        Mar 2024 <br>
-                        <i style="font-size: 1.3vw;">Certification was issued</i>
-                    </p>
-                    <p style="margin-top: 3.3vw;">
+                    <p style="margin-top: 3.2vw;">
                         Feb 2022 <br>
                         <i style="font-size: 1.3vw;">Certification was issued</i>
                     </p>
                     <p style="margin-top: 3.2vw;">
                         Feb 2022 <br>
                         <i style="font-size: 1.3vw;">Certification was issued</i>
-
                     </p>
                     <p style="margin-top: 3.3vw;">
                         Feb 2022 <br>
                         <i style="font-size: 1.3vw;">Certification was issued</i>
                     </p>
-                    <p style="margin-top: 3.2vw;">
+                    <p style="margin-top: 3.3vw;">
                         Jan 2022 <br>
                         <i style="font-size: 1.3vw;">Certification was issued</i>
                     </p>
@@ -133,39 +125,34 @@
 
                 <div class="certright">
                     <p style="margin-top: 1vw;">
+                        Data Analysis Fundamentals <br>
+                        UDACITY </p>
+
+                    <p style="margin-top: 1vw;">
+                        Android Developer Fundamentals <br>
+                        UDACITY </p>
+
+                    <p style="margin-top: 1vw;">
                         Programming Fundamentals <br>
-                        UDACITY
+                        UDACITY </p>
                     <p style="margin-top: 1vw;">
                         iSON INDUCTION PROGRAM <br>
                         iSON Xperiences
 
                     </p>
-                    <p style="margin-top: 1vw;">
-                        Getting Employed with No Job Experinence <br>
-                        Kefeta
-                    </p>
+                   
                     <p style="margin-top: 1vw;">
                         Certificate of Participation in JIT Evangelical <br>
                         Christian Students Fellowship
                         Evangelical Students and Graduates Union of
                         Ethiopia (EvaSUE)
                     </p>
-                    <p style="margin-top: 0vw;">
+                    <p style="margin-top: -0.2vw;">
                         Certificate of Participation in Kito Fellowship
                         Team <br>
                         Team of Prayers Mobilizers
                     </p>
-                    <p style="margin-top: 1vw;">
-                        Certificate of Participation in Art Class <br>
-                        Jimma University Architecture and Urban Planing
-                        Department
-                    </p>
-                    <p style="margin-top: 2vw;">
-                        Certificate of Completion in Life and Soft Skill
-                        Training <br>
-                        Integrated Youth Activity-Kefeta
-                    </p>
-                    <p style="margin-top: 1.5vw;">
+                    <p style="margin-top: 3.0vw;">
                         Certificate of Completion of Employability skill
                         and job readiness training <br>
                         Dereja
@@ -276,10 +263,6 @@
         </div>
     </div>
     <script src="script.js"></script>
-    <div class="original">
-        <p>Click <a href="CV_Kirubel_Eshetu.pdf">here</a> to see the document format of the CV</p>
-
-    </div>
 </body>
 
 <footer>
