--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>CV_Kirubel Eshetu</title>
-    <link rel="icon" href="My_picture.jpg">
+    <link rel="icon" href="KET.jpg">
 </head>
 
 <body>
     <h1 class="header">Carriculum Vitae</h1>
     <div class="container">
         <div class="containerleft">
-            <img src="My_picture.jpg" alt="Portrait picture of Kirubel Eshetu">
+            <img src="KET.jpg" alt="Kirubel Eshetu Tefera">
             <h2 class="h2personal">Personal Information</h2>
             <p class="personal">Age: <strong>23</strong></p>
             <p class="personal">Gender: <strong>Male</strong></p>
@@ -81,45 +81,45 @@
             <div class="certcontainer">
                 <div class="certleft">
                     <p>Feb 2024 <br>
-                        <i style="font-size: 1.3vw;">Certification was issued</i>
+                        <i class="italic">Certification was issued</i>
                     </p>
                     <p>Jan 2024 <br>
-                        <i style="font-size: 1.3vw;">Certification was issued</i>
+                        <i class="italic">Certification was issued</i>
                     </p>
                     <p>Dec 2024 <br>
-                        <i style="font-size: 1.3vw;">Certification was issued</i>
+                        <i class="italic">Certification was issued</i>
                     </p>
                     <p>
                         Oct 2024 <br>
-                        <i style="font-size: 1.3vw;">Certification was issued</i>
+                        <i class="italic">Certification was issued</i>
                     </p>
                     <p>
                         Aug 2024 <br>
-                        <i style="font-size: 1.3vw;">Certification was issued</i>
+                        <i class="italic">Certification was issued</i>
                     </p>
                     <p style="margin-top: 3.0vw;">
                         Jul 2024 <br>
-                        <i style="font-size: 1.3vw;">Certification was issued</i>
+                        <i class="italic">Certification was issued</i>
                     </p>
                     <p style="margin-top: 2.8vw;">
                         May 2024 <br>
-                        <i style="font-size: 1.3vw;">Certification was issued</i>
+                        <i class="italic">Certification was issued</i>
                     </p>
                     <p style="margin-top: 3.2vw;">
                         Feb 2022 <br>
-                        <i style="font-size: 1.3vw;">Certification was issued</i>
+                        <i class="italic">Certification was issued</i>
                     </p>
                     <p style="margin-top: 3.2vw;">
                         Feb 2022 <br>
-                        <i style="font-size: 1.3vw;">Certification was issued</i>
+                        <i class="italic">Certification was issued</i>
                     </p>
                     <p style="margin-top: 3.3vw;">
                         Feb 2022 <br>
-                        <i style="font-size: 1.3vw;">Certification was issued</i>
+                        <i class="italic">Certification was issued</i>
                     </p>
-                    <p style="margin-top: 3.3vw;">
+                    <p>
                         Jan 2022 <br>
-                        <i style="font-size: 1.3vw;">Certification was issued</i>
+                        <i class="italic">Certification was issued</i>
                     </p>
                 </div>
 
@@ -171,7 +171,7 @@
                         Certificate of Completion of Array Methods <br>
                         Grasshopper
                     </p>
-                    <p style="margin-top: 3vw;">
+                    <p style="margin-top: 1.1vw;">
                         Certificate of Participation in Space Science
                         Club <br>
                         Cisterican Monastry Mariam Tsion space science
@@ -262,7 +262,6 @@
             </div>
         </div>
     </div>
-    <script src="script.js"></script>
 </body>
 
 <footer>
