--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <h1 class="header">Carriculum Vitae</h1>
     <div class="container">
         <div class="containerleft">
-            <img src="KET.jpg" alt="Kirubel Eshetu Tefera">
+            <img src="KET.jpg" alt="Kirubel Eshetu Tefera" class="imageKET">
             <h2 class="h2personal">Personal Information</h2>
             <p class="personal">Age: <strong>23</strong></p>
             <p class="personal">Gender: <strong>Male</strong></p>
@@ -32,8 +32,8 @@
                 <h1 class="h1kirub">Kirubel Eshetu</h1>
                 <h2 class="h2fresh">Fresh Graduate</h2>
             </div>
+            <h3 class="h3it">About</h3>
             <div class="divcontent">
-                <h3>About</h3>
                 <p class="bio">
                     My name is Kirubel Eshetu Tefera. I am a young man who is passionate about technology. I recently
                     graduated with a bachelor’s degree in computer science from Jimma University. I am committed to
@@ -41,7 +41,7 @@
                     dedication, I am eager to contribute meaningfully and build a successful career in technology.
                 </p>
             </div>
-            <h3>Education</h3>
+            <h3 class="eduh3">Education</h3>
             <div class="educontainer">
                 <div class="eduleft">
                     <p>Bachlelor</p>
@@ -53,12 +53,11 @@
                     <p style="margin-top: 0.8vw;">Jul 2024 <br>
                         Graduation Date</p>
                 </div>
-
             </div>
             <h3>Work Experience</h3>
             <div class="workcontainer">
                 <div class="workleft">
-                    <p>Jul 2023 - Sep 2023 <br>
+                    <p class="AMN">Jul 2023 - Sep 2023 <br>
                         2 month <br>
                         <strong>IT technician and</strong><br>
                         Network <br>
@@ -67,7 +66,7 @@
                     </p>
                 </div>
                 <div class="workright">
-                    <p style="text-align: justify;">I have spent my internship period working
+                    <p style="text-align: justify;" class="IT">I have spent my internship period working
                         in Addis Media
                         Network as an IT technician and Network Administrator. The
                         internship was a very good experience to apply the knowledge I
@@ -97,23 +96,19 @@
                         Aug 2024 <br>
                         <i class="italic">Certification was issued</i>
                     </p>
-                    <p style="margin-top: 3.0vw;">
+                    <p class="jul2024">
                         Jul 2024 <br>
                         <i class="italic">Certification was issued</i>
                     </p>
-                    <p style="margin-top: 2.8vw;">
-                        May 2024 <br>
-                        <i class="italic">Certification was issued</i>
-                    </p>
-                    <p style="margin-top: 3.2vw;">
+                    <p class="feb2022">
                         Feb 2022 <br>
                         <i class="italic">Certification was issued</i>
                     </p>
-                    <p style="margin-top: 3.2vw;">
+                    <p class="feb20221">
                         Feb 2022 <br>
                         <i class="italic">Certification was issued</i>
                     </p>
-                    <p style="margin-top: 3.3vw;">
+                    <p class="feb20222">
                         Feb 2022 <br>
                         <i class="italic">Certification was issued</i>
                     </p>
@@ -124,54 +119,50 @@
                 </div>
 
                 <div class="certright">
-                    <p style="margin-top: 1vw;">
+                    <p class="dataanalysis">
                         Data Analysis Fundamentals <br>
                         UDACITY </p>
 
-                    <p style="margin-top: 1vw;">
+                    <p class="andriod">
                         Android Developer Fundamentals <br>
                         UDACITY </p>
 
-                    <p style="margin-top: 1vw;">
+                    <p class="programming">
                         Programming Fundamentals <br>
                         UDACITY </p>
-                    <p style="margin-top: 1vw;">
+                    <p class="ison">
                         iSON INDUCTION PROGRAM <br>
                         iSON Xperiences
 
                     </p>
-                   
-                    <p style="margin-top: 1vw;">
+
+                    <p class="evasue">
                         Certificate of Participation in JIT Evangelical <br>
                         Christian Students Fellowship
                         Evangelical Students and Graduates Union of
                         Ethiopia (EvaSUE)
                     </p>
-                    <p style="margin-top: -0.2vw;">
-                        Certificate of Participation in Kito Fellowship
-                        Team <br>
-                        Team of Prayers Mobilizers
-                    </p>
-                    <p style="margin-top: 3.0vw;">
+                
+                    <p class="dereja">
                         Certificate of Completion of Employability skill
                         and job readiness training <br>
                         Dereja
                     </p>
-                    <p style="margin-top: 1.5vw;">
+                    <p class="coding1">
                         Certificate of Completion of Coding
                         Fundamentals <br>
                         Grasshopper
                     </p>
-                    <p style="margin-top: 3.2vw;">
+                    <p class="coding2">
                         Certificate of Completion of Coding
                         Fundamentals II <br>
                         Grasshopper
                     </p>
-                    <p style="margin-top: 3.5vw;">
+                    <p class="coding3">
                         Certificate of Completion of Array Methods <br>
                         Grasshopper
                     </p>
-                    <p style="margin-top: 1.1vw;">
+                    <p class="space">
                         Certificate of Participation in Space Science
                         Club <br>
                         Cisterican Monastry Mariam Tsion space science
@@ -195,13 +186,13 @@
                     </p>
                 </div>
                 <div class="extraright">
-                    <p style="text-align: justify; margin-top: 1.2vw;">
+                    <p class="ptop">
                         The activity I was performing was a very good opportunity to
                         serve my fellowship through digital media. I have gained
                         practical experiences of social media management, audio
                         recording and editing and graphics design.
                     </p>
-                    <p style="text-align: justify; margin-top: 3.0vw;">
+                    <p class="pbottom">
                         I have served as a team leader for my high school in the club of
                         space science. It has given me a very good opportunity to
                         extend my knowledge on astronomy and get a very good
@@ -242,7 +233,7 @@
                             style="margin-left: 4.3vw; text-decoration: none;">ermiyas.abera@ju.edu.et</a><br>
                         Tel: <a href="tel: +251954356992"
                             style="margin-left: 1.3vw; text-decoration: none;">+251954356992</a>
-                    <p>
+                    <p class="yekoye">
                         <i>Contact detail:</i><br>
                         Email: <a href="mailto: yekoya104@gmail.com"
                             style="text-decoration: none;">yekoya104@gmail.com</a> <br>
@@ -251,7 +242,7 @@
                         Tel: <a href="tel:+251931863003"
                             style="margin-left: 1.3vw; text-decoration: none;;">+251931863003</a>
                     </p>
-                    <p>
+                    <p class="dani">
                         <i>Contact detail:</i><br>
                         Email: <a href="mailto: Danizew@gmail.com" style="text-decoration: none;">Danizew@gmail.com</a>
                         <br>
@@ -262,12 +253,14 @@
             </div>
         </div>
     </div>
+    <p class="inspire">Inspiration:- <strong>Dereja.com</strong></p>
 </body>
 
 <footer>
     <div class="footerdiv">
-    <p>This CV was created by Kirubel Eshetu</p>
-    <p>All rights revieved 2025</p>
-</div>
+        <p>This CV was created by Kirubel Eshetu</p>
+        <p>All rights revieved 2025</p>
+    </div>
 </footer>
+
 </html>
