--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                     <p>GPA: 3.45</p>
                 </div>
                 <div class="eduright">
-                    <p style="margin-top: 0.8vw;">Jul 2024 <br>
+                    <p class="july2024">July 2024 <br>
                         Graduation Date</p>
                 </div>
             </div>
@@ -66,9 +66,8 @@
                     </p>
                 </div>
                 <div class="workright">
-                    <p style="text-align: justify;" class="IT">I have spent my internship period working
-                        in Addis Media
-                        Network as an IT technician and Network Administrator. The
+                    <p class="IT">I have spent my internship period working
+                        in Addis Media Network as an IT technician and Network Administrator. The
                         internship was a very good experience to apply the knowledge I
                         had in university to real world problems. I had a very good
                         opportunity working in hardware maintenance and
@@ -227,27 +226,21 @@
                 </div>
 
                 <div class="refright">
-                    <p><i>Contact detail:</i><br>
-                        Email: <a href="mailto: ermidbu@gmail.com" style="text-decoration: none;">ermidbu@gmail.com</a>
-                        <a href="mailto"
-                            style="margin-left: 4.3vw; text-decoration: none;">ermiyas.abera@ju.edu.et</a><br>
-                        Tel: <a href="tel: +251954356992"
-                            style="margin-left: 1.3vw; text-decoration: none;">+251954356992</a>
+                    <p class="ermi"><i>Contact detail:</i><br>
+                        Email: <a href="mailto: ermidbu@gmail.com" class="ermi1">ermidbu@gmail.com</a>
+                        <a href="mailto" class="ermi2">ermiyas.abera@ju.edu.et</a><br>
+                        Tel: <a href="tel: +251954356992" class="ermi3">+251954356992</a>
                     <p class="yekoye">
                         <i>Contact detail:</i><br>
-                        Email: <a href="mailto: yekoya104@gmail.com"
-                            style="text-decoration: none;">yekoya104@gmail.com</a> <br>
-                        <a href="mailto: yekoye.asmare@ju.edu.et;"
-                            style="margin-left: 4.3vw; text-decoration: none;">yekoye.asmare@ju.edu.et</a> <br>
-                        Tel: <a href="tel:+251931863003"
-                            style="margin-left: 1.3vw; text-decoration: none;;">+251931863003</a>
+                        Email: <a href="mailto: yekoya104@gmail.com" class="link0">yekoya104@gmail.com</a> <br>
+                        <a href="mailto: yekoye.asmare@ju.edu.et;" class="link1">yekoye.asmare@ju.edu.et</a> <br>
+                        Tel: <a href="tel:+251931863003" class="link2">+251931863003</a>
                     </p>
                     <p class="dani">
                         <i>Contact detail:</i><br>
-                        Email: <a href="mailto: Danizew@gmail.com" style="text-decoration: none;">Danizew@gmail.com</a>
+                        Email: <a href="mailto: Danizew@gmail.com">Danizew@gmail.com</a>
                         <br>
-                        Tel: <a href="tel:+251912127988"
-                            style="margin-left: 1.3vw; text-decoration: none;">+251912127988</a>
+                        Tel: <a href="tel:+251912127988" class="tel"><span>+251912127988</span></a>
                     </p>
                 </div>
             </div>
