--- a/index.html
+++ b/index.html
@@ -136,10 +136,9 @@
                     </p>
 
                     <p class="evasue">
-                        Certificate of Participation in JIT Evangelical <br>
-                        Christian Students Fellowship
+                        Certificate of Participation in  
                         Evangelical Students and Graduates Union of
-                        Ethiopia (EvaSUE)
+                        Ethiopia (EvaSUE) Fellowship
                     </p>
 
                     <p class="dereja">
