--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
 <footer>
     <div class="footerdiv">
         <p>This CV was created by Kirubel Eshetu</p>
-        <p>All rights revieved 2025</p>
+        <p>All rights revieved <script>new Date().getFullYear()</script></p>
     </div>
 </footer>
 
